crates/jolt_java_fmt/tests/snapshots/corpus__style__declarations__long_array_dimensions.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class LongArrayDimensions {
  int[][][][][][][][][][][][][][][][][][][][][][][][] values[][][][][][][][][][][][];
  int[][] compactValues;
  String @Readonly [] @Frozen [] @Stable [] @Shared [] @Large [] @Huge [] @Wide [] @Deep [] labels;

  void consume(
    int[][][][][][][][][][][][][][][][][][][][][][][][] values[][][][][][][][][][][][]
  ) {
  }
}

diagnostics:
(none)
