crates/jolt_java_fmt/tests/snapshots/corpus__style__declarations__member_leading_comments.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class MemberComments {
  // constructor lead
  MemberComments() {
    // before super
    super();
  }

  // method lead
  void work() {
  }
}

diagnostics:
(none)
