crates/jolt_java_fmt/tests/snapshots/corpus__style__declarations__modifiers_and_annotations.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
@Complex( /* args */
  name = "demo", // name
  flags = { 1, 2 }
)
@Generated("tool")
@Deprecated
public final class User {
  @FieldAnno(name = "id", values = { 1, 2 })
  private final String id;
  @FieldOnly
  String unqualified;

  public @Nonnull String name() {
    return id;
  }

  @Action
  @Checked
  public @Nullable void reset() {
  }

  @Override
  String raw() {
    return id;
  }
}

public sealed strictfp class Base permits Open {
}

public non-sealed strictfp class Open extends Base {
}

@Deprecated
non-sealed class AnnotatedOpen extends Base {
}

final /* stable */ public class CommentedModifier {
  volatile /* shared */ public int value;
}

diagnostics:
(none)
