crates/jolt_java_fmt/tests/snapshots/corpus__style__declarations__multi_variable_declarator_continuations.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class MultiVariableDeclaratorContinuations {
  int firstFieldVariable = 1,
    secondFieldVariable = 2,
    thirdFieldVariable = provider();

  void method() {
    int firstLocalVariable = 1,
      secondLocalVariable = 2,
      thirdLocalVariable = provider();
  }

  int provider() {
    return 3;
  }
}

diagnostics:
(none)
