crates/jolt_java_fmt/tests/snapshots/corpus__style__declarations__parameter_and_component_comments.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class Comments {
  void run( /* params */
    String name, // user name
    int count /* kept */
    // before params close
  ) {
  }
}

record Person( /* components */
  String displayName, // display name
  int age /* years */
  // before components close
) {
}

diagnostics:
(none)
