crates/jolt_java_fmt/tests/snapshots/corpus__style__declarations__receiver_parameters.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class ReceiverOuter {
  class ReceiverInner {
    ReceiverInner(@Readonly ReceiverOuter ReceiverOuter.this, int value) {
    }

    void bind(@Readonly ReceiverInner this, String value) {
    }
  }
}

diagnostics:
(none)
