crates/jolt_java_fmt/tests/snapshots/corpus__style__declarations__remove_empty_type_body_declarations.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class A {
  // keep class marker
  /* keep trailing class marker */
}

interface Api {
  // keep interface marker
  void call(); // call marker
}

@interface Marker {
  /* keep annotation marker */
  String value();
}

enum Mode {
  A;

  // keep enum marker
  void run() {
  }
}

enum EmptyEnum {
  // keep empty enum marker
}

diagnostics:
(none)
