crates/jolt_java_fmt/tests/snapshots/corpus__style__declarations__throws_continuation.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class ThrowsContinuation {
  void read()
    throws FirstCheckedException,
      SecondCheckedException,
      ThirdCheckedException {
  }
}

diagnostics:
(none)
