crates/jolt_java_fmt/tests/snapshots/corpus__style__declarations__throws_on_empty_method.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class Task {
  public void run() throws IOException, TimeoutException {
  }
}

diagnostics:
(none)
