crates/jolt_java_fmt/tests/snapshots/corpus__style__declarations__type_body_brace_after_header_comment.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
// a comment that ends the header line must not leave a space before the brace
class TopLevelExtendsComment
  extends
    Base // trailing
{
  int x = 1;
}

class TopLevelImplementsComment
  implements
    Marker // trailing
{
  int y = 2;
}

class Outer {
  class NestedExtendsComment
    extends
      Base // trailing
  {
    int z = 3;
  }
}

diagnostics:
(none)
